Fix z-index of contextual hovering toolbar

--- a/packages/ui/src/styles/components/hoveringToolbar.sass
+++ b/packages/ui/src/styles/components/hoveringToolbar.sass
@@ -37,3 +37,4 @@
 		right: unset
 		top: -1000vh
 		top: unset
+		z-index: 3
